assets/sass/_site-header.scss
.site-header {
    background-color: $black;
    left: 0;
    min-height: 61px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 999;
}

.admin-bar .site-header {
    top: 32px;
}

.site-header .widget_search input[type="search"] {
    padding: 10px;
    position: relative;
    top: 3px;
    border-radius: 0;
    appearance: none;
}

